Source/WebCore/platform/graphics/filters/FEBlend.h
@@ -45,8 +45,8 @@ public:
     BlendModeType blendMode() const;
     bool setBlendMode(BlendModeType);
 
-    void platformApplyGeneric(PassRefPtr<Uint8ClampedArray> pixelArrayA, PassRefPtr<Uint8ClampedArray> pixelArrayB,
-                              Uint8ClampedArray* dstPixelArray, unsigned pixelArrayLength);
+    void platformApplyGeneric(unsigned char* srcPixelArrayA, unsigned char* srcPixelArrayB, unsigned char* dstPixelArray,
+                           unsigned colorArrayLength);
     void platformApplyNEON(unsigned char* srcPixelArrayA, unsigned char* srcPixelArrayB, unsigned char* dstPixelArray,
                            unsigned colorArrayLength);
 
